--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@heroicons/react": "^2.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^7.6.2",
+    "react-router-dom": "^6.11.1",
     "react-scripts": "^5.0.1",
     "web-vitals": "^3.5.0"
   },
@@ -47,18 +47,19 @@
     "autoprefixer": "^10.4.14",
     "eslint": "^8.45.0",
     "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-prettier": "^5.5.0",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "gh-pages": "^6.3.0",
-    "postcss": "^8.4.27",
+    "postcss": "^8.4.21",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-import": "^15.1.0",
     "postcss-loader": "^7.3.3",
     "postcss-preset-env": "^8.4.2",
     "prettier": "^3.0.0",
     "source-map-explorer": "^2.5.3",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.1"
   },
   "resolutions": {
     "postcss": "^8.4.27"
